Adiciona função do grid

--- a/css/scss/_grid.scss
+++ b/css/scss/_grid.scss
@@ -26,3 +26,14 @@ $small-device: 480px;
     }
   }
 }
+
+
+@function grid($col, $offset: false) {
+  $width: $col / $cols * 100 + "%";
+  $result: calc(#{$width} - #{$gutter});
+  @if $offset == offset {
+    $gutter: $gutter / 2;
+    $result: calc(#{$width} + #{$gutter});
+  }
+  @return $result;
+}
