Adiciona loop gerador de classes do grid

--- a/css/scss/_grid.scss
+++ b/css/scss/_grid.scss
@@ -37,3 +37,11 @@ $small-device: 480px;
   }
   @return $result;
 }
+
+@for $i from 1 through $cols {
+  .grid-#{$i} {
+    width: grid($i);
+  }
+}
+
+}
