--- a/css/scss/_grid.scss
+++ b/css/scss/_grid.scss
@@ -44,4 +44,18 @@ $small-device: 480px;
   }
 }
 
+@mixin grid-structure {
+  float: left;
+  min-height: 1;
+  margin-left: $gutter / 2;
+  margin-right: $gutter / 2;
+  @include device(small) {
+    width: 100%;
+    float: none;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+[class^="grid-"] {
+  @include grid-structure;
 }
