Adiciona mixin de clearfix

--- a/css/scss/_grid.scss
+++ b/css/scss/_grid.scss
@@ -72,3 +72,11 @@ $small-device: 480px;
     margin-left: 0px;
   }
 }
+
+@mixin clearfix {
+  &::after, &::before {
+    content: '';
+    display: table;
+    clear: both;
+  }
+}
