--- a/css/style.css
+++ b/css/style.css
@@ -173,3 +173,29 @@ table {
     margin-left: 0px;
   }
 }
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  position: relative;
+}
+
+@media only screen and (min-width: 760px) and (max-width: 1199px) {
+  .container {
+    max-width: 760px;
+  }
+}
+
+@media only screen and (max-width: 759px) {
+  .container {
+    max-width: 480px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+
+.container::after, .container::before {
+  content: '';
+  display: table;
+  clear: both;
+}
