--- a/css/scss/_grid.scss
+++ b/css/scss/_grid.scss
@@ -52,8 +52,8 @@ $small-device: 480px;
   @include device(small) {
     width: 100%;
     float: none;
-    margin-left: 0;
-    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 [class^="grid-"] {
