--- a/css/style.css
+++ b/css/style.css
@@ -115,8 +115,8 @@ table {
   [class^="grid-"] {
     width: 100%;
     float: none;
-    margin-left: 0;
-    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
