--- a/css/style.css
+++ b/css/style.css
@@ -199,3 +199,22 @@ table {
   display: table;
   clear: both;
 }
+
+.row {
+  position: relative;
+  margin-left: -10px;
+  margin-right: -10px;
+}
+
+@media only screen and (max-width: 759px) {
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+.row::after, .row::before {
+  content: '';
+  display: table;
+  clear: both;
+}
