--- a/css/scss/_variables-mixins.scss
+++ b/css/scss/_variables-mixins.scss
@@ -6,3 +6,26 @@ $green: #1AB912;
 
 $font-1: 'PT Mono', Courier, monospace;
 $font-2: 'Aref Ruqaa', 'Times New Roman', Times, serif;
+
+@function em($pixel, $context: 16) {
+  @return $pixel / $context + em;
+}
+
+@mixin typo-1($size) {
+  font-family: $font-1;
+  @if $size == 18 {
+    font-size: em(18);
+    line-height: em(30, 18);
+  }
+}
+@mixin typo-2($size) {
+  font-family: $font-2;
+  @if $size == 18 {
+    font-size: em(18);
+    line-height: em(30, 18);
+  }
+  @else if $size == 24 {
+    font-size: em(24);
+    line-height: em(30, 24);
+  }
+}
