--- a/css/style.css
+++ b/css/style.css
@@ -218,3 +218,56 @@ table {
   display: table;
   clear: both;
 }
+
+body {
+  background-color: #EDECE4;
+  border: 10px solid #CBC6B9;
+  color: #2A2426;
+}
+
+@media only screen and (max-width: 759px) {
+  body {
+    border: none;
+  }
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+p, address {
+  font-family: "PT Mono", Courier, monospace;
+  font-size: 1.125em;
+  line-height: 1.66667em;
+}
+
+.title {
+  font-family: "PT Mono", Courier, monospace;
+  font-size: 1.125em;
+  line-height: 1.66667em;
+  text-transform: uppercase;
+}
+
+@media only screen and (max-width: 759px) {
+  .title {
+    margin-bottom: 40px;
+  }
+}
+
+.title::after {
+  content: '';
+  display: block;
+  background-color: #2A2426;
+  width: 75%;
+  height: 2px;
+  float: right;
+  margin-top: 14px;
+}
+
+@media only screen and (min-width: 760px) and (max-width: 1199px) {
+  .title::after {
+    width: 60%;
+  }
+}
+
