--- a/css/style.css
+++ b/css/style.css
@@ -271,3 +271,77 @@ p, address {
   }
 }
 
+.intro {
+  margin-top: 60px;
+}
+
+@media only screen and (max-width: 759px) {
+  .intro {
+    margin-top: 20px;
+  }
+}
+
+.logo {
+  margin-bottom: 60px;
+}
+
+.intro-info {
+  border-right: 2px solid #2A2426;
+  max-width: 320px;
+}
+
+.intro-info p {
+  padding-top: 10px;
+}
+
+.intro-info p:first-child {
+  border-bottom: 2px solid #2A2426;
+  padding-bottom: 10px;
+}
+
+.intro-tel {
+  color: #988c77;
+}
+
+@media only screen and (max-width: 759px) {
+  .intro-tel {
+    margin-bottom: 40px;
+  }
+}
+
+.intro-tel::after {
+  content: '/ / / /';
+  display: block;
+  margin-top: 200px;
+  font-size: 220px;
+  letter-spacing: -90px;
+  color: #2A2426;
+}
+
+@media only screen and (min-width: 760px) and (max-width: 1199px) {
+  .intro-tel::after {
+    margin-top: 80px;
+    font-size: 160px;
+    letter-spacing: -70px;
+  }
+}
+
+@media only screen and (max-width: 759px) {
+  .intro-tel::after {
+    display: none;
+  }
+}
+
+.open {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background-color: #1AB912;
+  border-radius: 50%;
+  margin-left: 30px;
+}
+
+.intro-img {
+  border: 10px solid #CBC6B9;
+  width: 100%;
+}
