--- a/css/scss/_grid.scss
+++ b/css/scss/_grid.scss
@@ -46,14 +46,14 @@ $small-device: 480px;
 
 @mixin grid-structure {
   float: left;
-  min-height: 1;
+  min-height: 1px;
   margin-left: $gutter / 2;
   margin-right: $gutter / 2;
   @include device(small) {
     width: 100%;
     float: none;
-    padding-left: 0;
-    padding-right: 0;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 }
 [class^="grid-"] {
