--- a/css/scss/_variables-mixins.scss
+++ b/css/scss/_variables-mixins.scss
@@ -29,3 +29,9 @@ $font-2: 'Aref Ruqaa', 'Times New Roman', Times, serif;
     line-height: em(30, 24);
   }
 }
+
+@mixin box-shadow($shadow...) {
+  -webkit-box-shadow: $shadow;
+  -moz-box-shadow: $shadow;
+  box-shadow: $shadow;
+}
