--- a/css/style.css
+++ b/css/style.css
@@ -1,549 +1,1 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-*, *::after, *::before {
-  box-sizing: border-box;
-}
-
-.grid-1 {
-  width: calc(8.33333% - 20px);
-}
-
-.grid-2 {
-  width: calc(16.66667% - 20px);
-}
-
-.grid-3 {
-  width: calc(25% - 20px);
-}
-
-.grid-4 {
-  width: calc(33.33333% - 20px);
-}
-
-.grid-5 {
-  width: calc(41.66667% - 20px);
-}
-
-.grid-6 {
-  width: calc(50% - 20px);
-}
-
-.grid-7 {
-  width: calc(58.33333% - 20px);
-}
-
-.grid-8 {
-  width: calc(66.66667% - 20px);
-}
-
-.grid-9 {
-  width: calc(75% - 20px);
-}
-
-.grid-10 {
-  width: calc(83.33333% - 20px);
-}
-
-.grid-11 {
-  width: calc(91.66667% - 20px);
-}
-
-.grid-12 {
-  width: calc(100% - 20px);
-}
-
-[class^="grid-"] {
-  float: left;
-  min-height: 1px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-@media only screen and (max-width: 759px) {
-  [class^="grid-"] {
-    width: 100%;
-    float: none;
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-}
-
-.offset-1 {
-  margin-left: calc(8.33333% + 10px);
-}
-
-.offset-2 {
-  margin-left: calc(16.66667% + 10px);
-}
-
-.offset-3 {
-  margin-left: calc(25% + 10px);
-}
-
-.offset-4 {
-  margin-left: calc(33.33333% + 10px);
-}
-
-.offset-5 {
-  margin-left: calc(41.66667% + 10px);
-}
-
-.offset-6 {
-  margin-left: calc(50% + 10px);
-}
-
-.offset-7 {
-  margin-left: calc(58.33333% + 10px);
-}
-
-.offset-8 {
-  margin-left: calc(66.66667% + 10px);
-}
-
-.offset-9 {
-  margin-left: calc(75% + 10px);
-}
-
-.offset-10 {
-  margin-left: calc(83.33333% + 10px);
-}
-
-.offset-11 {
-  margin-left: calc(91.66667% + 10px);
-}
-
-.offset-12 {
-  margin-left: calc(100% + 10px);
-}
-
-@media only screen and (max-width: 759px) {
-  .offset-1, .offset-2, .offset-3, .offset-4, .offset-5, .offset-6, .offset-7, .offset-8, .offset-9, .offset-10, .offset-11, .offset-12 {
-    margin-left: 0px;
-  }
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  position: relative;
-}
-
-@media only screen and (min-width: 760px) and (max-width: 1199px) {
-  .container {
-    max-width: 760px;
-  }
-}
-
-@media only screen and (max-width: 759px) {
-  .container {
-    max-width: 480px;
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-}
-
-.container::after, .container::before {
-  content: '';
-  display: table;
-  clear: both;
-}
-
-.row {
-  position: relative;
-  margin-left: -10px;
-  margin-right: -10px;
-}
-
-@media only screen and (max-width: 759px) {
-  .row {
-    margin-left: 0;
-    margin-right: 0;
-  }
-}
-
-.row::after, .row::before {
-  content: '';
-  display: table;
-  clear: both;
-}
-
-body {
-  background-color: #EDECE4;
-  border: 10px solid #CBC6B9;
-  color: #2A2426;
-}
-
-@media only screen and (max-width: 759px) {
-  body {
-    border: none;
-  }
-}
-
-img {
-  display: block;
-  max-width: 100%;
-}
-
-p, address {
-  font-family: "PT Mono", Courier, monospace;
-  font-size: 1.125em;
-  line-height: 1.66667em;
-}
-
-.title {
-  font-family: "PT Mono", Courier, monospace;
-  font-size: 1.125em;
-  line-height: 1.66667em;
-  text-transform: uppercase;
-}
-
-@media only screen and (max-width: 759px) {
-  .title {
-    margin-bottom: 40px;
-  }
-}
-
-.title::after {
-  content: '';
-  display: block;
-  background-color: #2A2426;
-  width: 75%;
-  height: 2px;
-  float: right;
-  margin-top: 14px;
-}
-
-@media only screen and (min-width: 760px) and (max-width: 1199px) {
-  .title::after {
-    width: 60%;
-  }
-}
-
-.intro {
-  margin-top: 60px;
-}
-
-@media only screen and (max-width: 759px) {
-  .intro {
-    margin-top: 20px;
-  }
-}
-
-.logo {
-  margin-bottom: 60px;
-}
-
-.intro-info {
-  border-right: 2px solid #2A2426;
-  max-width: 320px;
-}
-
-.intro-info p {
-  padding-top: 10px;
-}
-
-.intro-info p:first-child {
-  border-bottom: 2px solid #2A2426;
-  padding-bottom: 10px;
-}
-
-.intro-tel {
-  color: #988c77;
-}
-
-@media only screen and (max-width: 759px) {
-  .intro-tel {
-    margin-bottom: 40px;
-  }
-}
-
-.intro-tel::after {
-  content: '/ / / /';
-  display: block;
-  margin-top: 200px;
-  font-size: 220px;
-  letter-spacing: -90px;
-  color: #2A2426;
-}
-
-@media only screen and (min-width: 760px) and (max-width: 1199px) {
-  .intro-tel::after {
-    margin-top: 80px;
-    font-size: 160px;
-    letter-spacing: -70px;
-  }
-}
-
-@media only screen and (max-width: 759px) {
-  .intro-tel::after {
-    display: none;
-  }
-}
-
-.open {
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  background-color: #1AB912;
-  border-radius: 50%;
-  margin-left: 30px;
-}
-
-.intro-img {
-  border: 10px solid #CBC6B9;
-  width: 100%;
-}
-
-.menu {
-  margin-top: 120px;
-  margin-bottom: 120px;
-}
-
-@media only screen and (max-width: 759px) {
-  .menu {
-    margin-top: 60px;
-    margin-bottom: 60px;
-  }
-}
-
-.menu-item {
-  margin-bottom: 60px;
-}
-
-.menu-item img {
-  border-radius: 50%;
-  border: 10px solid #CBC6B9;
-  position: absolute;
-  right: 0;
-  margin-top: 50px;
-}
-
-@media only screen and (min-width: 1200px) {
-  .menu-item img {
-    right: 120px;
-  }
-}
-
-@media only screen and (max-width: 759px) {
-  .menu-item img {
-    width: 120px;
-    margin-top: 0;
-  }
-}
-
-.menu-item h2 {
-  font-family: "Aref Ruqaa", "Times New Roman", Times, serif;
-  font-size: 1.5em;
-  line-height: 1.25em;
-  margin-bottom: 1em;
-}
-
-.menu-item li {
-  font-family: "PT Mono", Courier, monospace;
-  font-size: 1.125em;
-  line-height: 1.94444em;
-}
-
-.menu-item li span {
-  font-family: "Aref Ruqaa", "Times New Roman", Times, serif;
-  color: #988c77;
-  display: inline-block;
-  width: 70px;
-  text-align: right;
-  margin-right: 10px;
-  margin-left: -80px;
-}
-
-@media only screen and (max-width: 759px) {
-  .menu-item li span {
-    margin-left: 0px;
-    width: auto;
-  }
-}
-
-.contact {
-  margin-top: 120px;
-  margin-bottom: 120px;
-}
-
-@media only screen and (max-width: 759px) {
-  .contact {
-    margin-top: 60px;
-    margin-bottom: 60px;
-  }
-}
-
-.contact form label {
-  font-family: "PT Mono", Courier, monospace;
-  font-size: 1.125em;
-  line-height: 1.66667em;
-  display: block;
-}
-
-.contact form input:not([type="button"]), .contact form textarea {
-  font-family: "PT Mono", Courier, monospace;
-  font-size: 1.125em;
-  line-height: 1.66667em;
-  color: #2A2426;
-  width: 100%;
-  padding: 0 5px;
-  height: 40px;
-  border: 2px solid #988c77;
-  background: transparent;
-  outline: none;
-  margin-bottom: 1em;
-  transition: border .2s;
-}
-
-.contact form input:not([type="button"]):hover, .contact form input:not([type="button"]):focus, .contact form textarea:hover, .contact form textarea:focus {
-  border: 2px solid #CBC6B9;
-}
-
-.contact form textarea {
-  height: 120px;
-  resize: none;
-}
-
-.contact form input.button {
-  font-family: "PT Mono", Courier, monospace;
-  font-size: 1.125em;
-  line-height: 1.66667em;
-  outline: none;
-  cursor: pointer;
-  color: #988c77;
-  text-transform: uppercase;
-  border: 2px solid #988c77;
-  background: transparent;
-  display: block;
-  width: 200px;
-  padding-top: 5px;
-  -webkit-box-shadow: 5px 5px 0 -2px #CBC6B9, 5px 5px 0 0 #988c77;
-  -moz-box-shadow: 5px 5px 0 -2px #CBC6B9, 5px 5px 0 0 #988c77;
-  box-shadow: 5px 5px 0 -2px #CBC6B9, 5px 5px 0 0 #988c77;
-  transition: .3s;
-}
-
-.contact form input.button:hover, .contact form input.button:focus {
-  -webkit-box-shadow: 3px 3px 0 -2px #CBC6B9, 3px 3px 0 0 #988c77;
-  -moz-box-shadow: 3px 3px 0 -2px #CBC6B9, 3px 3px 0 0 #988c77;
-  box-shadow: 3px 3px 0 -2px #CBC6B9, 3px 3px 0 0 #988c77;
-}
-
-.contact-info {
-  color: #988c77;
-  margin-top: 2em;
-  margin-bottom: 3em;
-}
-
-@media only screen and (min-width: 1200px) {
-  .contact-info {
-    float: right;
-    text-align: right;
-    margin-top: -3em;
-  }
-}
-
-.contact-map {
-  display: block;
-  -webkit-box-shadow: 0 0 0 10px #CBC6B9;
-  -moz-box-shadow: 0 0 0 10px #CBC6B9;
-  box-shadow: 0 0 0 10px #CBC6B9;
-  clear: both;
-}
-
-.contact-map img {
-  width: 100%;
-}
-
-.footer {
-  padding: 20px 0;
-  background: #2A2426;
-  -webkit-box-shadow: 0 0 0 11px #2A2426;
-  -moz-box-shadow: 0 0 0 11px #2A2426;
-  box-shadow: 0 0 0 11px #2A2426;
-}
-
-.footer p {
-  float: left;
-  color: #EDECE4;
-}
-
-@media only screen and (max-width: 759px) {
-  .footer p {
-    float: none;
-    text-align: center;
-  }
-}
-
-.footer p a {
-  color: #EDECE4;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.footer p a:hover {
-  text-decoration: underline;
-}
-
-.footer a img {
-  float: right;
-}
-
-@media only screen and (max-width: 759px) {
-  .footer a img {
-    float: none;
-    margin: 20px auto;
-  }
-}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}*,*::after,*::before{box-sizing:border-box}.grid-1{width:calc(8.33333% - 20px)}.grid-2{width:calc(16.66667% - 20px)}.grid-3{width:calc(25% - 20px)}.grid-4{width:calc(33.33333% - 20px)}.grid-5{width:calc(41.66667% - 20px)}.grid-6{width:calc(50% - 20px)}.grid-7{width:calc(58.33333% - 20px)}.grid-8{width:calc(66.66667% - 20px)}.grid-9{width:calc(75% - 20px)}.grid-10{width:calc(83.33333% - 20px)}.grid-11{width:calc(91.66667% - 20px)}.grid-12{width:calc(100% - 20px)}[class^="grid-"]{float:left;min-height:1px;margin-left:10px;margin-right:10px}@media only screen and (max-width: 759px){[class^="grid-"]{width:100%;float:none;margin-left:0px;margin-right:0px}}.offset-1{margin-left:calc(8.33333% + 10px)}.offset-2{margin-left:calc(16.66667% + 10px)}.offset-3{margin-left:calc(25% + 10px)}.offset-4{margin-left:calc(33.33333% + 10px)}.offset-5{margin-left:calc(41.66667% + 10px)}.offset-6{margin-left:calc(50% + 10px)}.offset-7{margin-left:calc(58.33333% + 10px)}.offset-8{margin-left:calc(66.66667% + 10px)}.offset-9{margin-left:calc(75% + 10px)}.offset-10{margin-left:calc(83.33333% + 10px)}.offset-11{margin-left:calc(91.66667% + 10px)}.offset-12{margin-left:calc(100% + 10px)}@media only screen and (max-width: 759px){.offset-1,.offset-2,.offset-3,.offset-4,.offset-5,.offset-6,.offset-7,.offset-8,.offset-9,.offset-10,.offset-11,.offset-12{margin-left:0px}}.container{max-width:1200px;margin:0 auto;position:relative}@media only screen and (min-width: 760px) and (max-width: 1199px){.container{max-width:760px}}@media only screen and (max-width: 759px){.container{max-width:480px;margin-left:10px;margin-right:10px}}.container::after,.container::before{content:'';display:table;clear:both}.row{position:relative;margin-left:-10px;margin-right:-10px}@media only screen and (max-width: 759px){.row{margin-left:0;margin-right:0}}.row::after,.row::before{content:'';display:table;clear:both}body{background-color:#EDECE4;border:10px solid #CBC6B9;color:#2A2426}@media only screen and (max-width: 759px){body{border:none}}img{display:block;max-width:100%}p,address{font-family:"PT Mono",Courier,monospace;font-size:1.125em;line-height:1.66667em}.title{font-family:"PT Mono",Courier,monospace;font-size:1.125em;line-height:1.66667em;text-transform:uppercase}@media only screen and (max-width: 759px){.title{margin-bottom:40px}}.title::after{content:'';display:block;background-color:#2A2426;width:75%;height:2px;float:right;margin-top:14px}@media only screen and (min-width: 760px) and (max-width: 1199px){.title::after{width:60%}}.intro{margin-top:60px}@media only screen and (max-width: 759px){.intro{margin-top:20px}}.logo{margin-bottom:60px}.intro-info{border-right:2px solid #2A2426;max-width:320px}.intro-info p{padding-top:10px}.intro-info p:first-child{border-bottom:2px solid #2A2426;padding-bottom:10px}.intro-tel{color:#988c77}@media only screen and (max-width: 759px){.intro-tel{margin-bottom:40px}}.intro-tel::after{content:'/ / / /';display:block;margin-top:200px;font-size:220px;letter-spacing:-90px;color:#2A2426}@media only screen and (min-width: 760px) and (max-width: 1199px){.intro-tel::after{margin-top:80px;font-size:160px;letter-spacing:-70px}}@media only screen and (max-width: 759px){.intro-tel::after{display:none}}.open{display:inline-block;width:12px;height:12px;background-color:#1AB912;border-radius:50%;margin-left:30px}.intro-img{border:10px solid #CBC6B9;width:100%}.menu{margin-top:120px;margin-bottom:120px}@media only screen and (max-width: 759px){.menu{margin-top:60px;margin-bottom:60px}}.menu-item{margin-bottom:60px}.menu-item img{border-radius:50%;border:10px solid #CBC6B9;position:absolute;right:0;margin-top:50px}@media only screen and (min-width: 1200px){.menu-item img{right:120px}}@media only screen and (max-width: 759px){.menu-item img{width:120px;margin-top:0}}.menu-item h2{font-family:"Aref Ruqaa","Times New Roman",Times,serif;font-size:1.5em;line-height:1.25em;margin-bottom:1em}.menu-item li{font-family:"PT Mono",Courier,monospace;font-size:1.125em;line-height:1.94444em}.menu-item li span{font-family:"Aref Ruqaa","Times New Roman",Times,serif;color:#988c77;display:inline-block;width:70px;text-align:right;margin-right:10px;margin-left:-80px}@media only screen and (max-width: 759px){.menu-item li span{margin-left:0px;width:auto}}.contact{margin-top:120px;margin-bottom:120px}@media only screen and (max-width: 759px){.contact{margin-top:60px;margin-bottom:60px}}.contact form label{font-family:"PT Mono",Courier,monospace;font-size:1.125em;line-height:1.66667em;display:block}.contact form input:not([type="button"]),.contact form textarea{font-family:"PT Mono",Courier,monospace;font-size:1.125em;line-height:1.66667em;color:#2A2426;width:100%;padding:0 5px;height:40px;border:2px solid #988c77;background:transparent;outline:none;margin-bottom:1em;transition:border .2s}.contact form input:not([type="button"]):hover,.contact form input:not([type="button"]):focus,.contact form textarea:hover,.contact form textarea:focus{border:2px solid #CBC6B9}.contact form textarea{height:120px;resize:none}.contact form input.button{font-family:"PT Mono",Courier,monospace;font-size:1.125em;line-height:1.66667em;outline:none;cursor:pointer;color:#988c77;text-transform:uppercase;border:2px solid #988c77;background:transparent;display:block;width:200px;padding-top:5px;-webkit-box-shadow:5px 5px 0 -2px #CBC6B9,5px 5px 0 0 #988c77;-moz-box-shadow:5px 5px 0 -2px #CBC6B9,5px 5px 0 0 #988c77;box-shadow:5px 5px 0 -2px #CBC6B9,5px 5px 0 0 #988c77;transition:.3s}.contact form input.button:hover,.contact form input.button:focus{-webkit-box-shadow:3px 3px 0 -2px #CBC6B9,3px 3px 0 0 #988c77;-moz-box-shadow:3px 3px 0 -2px #CBC6B9,3px 3px 0 0 #988c77;box-shadow:3px 3px 0 -2px #CBC6B9,3px 3px 0 0 #988c77}.contact-info{color:#988c77;margin-top:2em;margin-bottom:3em}@media only screen and (min-width: 1200px){.contact-info{float:right;text-align:right;margin-top:-3em}}.contact-map{display:block;-webkit-box-shadow:0 0 0 10px #CBC6B9;-moz-box-shadow:0 0 0 10px #CBC6B9;box-shadow:0 0 0 10px #CBC6B9;clear:both}.contact-map img{width:100%}.footer{padding:20px 0;background:#2A2426;-webkit-box-shadow:0 0 0 11px #2A2426;-moz-box-shadow:0 0 0 11px #2A2426;box-shadow:0 0 0 11px #2A2426}.footer p{float:left;color:#EDECE4}@media only screen and (max-width: 759px){.footer p{float:none;text-align:center}}.footer p a{color:#EDECE4;font-weight:bold;text-decoration:none}.footer p a:hover{text-decoration:underline}.footer a img{float:right}@media only screen and (max-width: 759px){.footer a img{float:none;margin:20px auto}}
